Clean up tests.